force-app/main/default/objects/Alumni_Enquiry__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description field to capture Alumni Enquiry details</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <description>Enquiry Type field to capture the Alumni form details</description>
        <label>Enquiry Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rich_Description__c</fullName>
        <description>Field to club details for Alumni Enquiries</description>
        <label>Rich Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject field to capture details</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedEmail__c</fullName>
        <description>Supplied Email to capture Email details</description>
        <label>SuppliedEmail</label>
        <type>Email</type>
    </fields>
    <label>Alumni Enquiry</label>
    <nameField>
        <label>Enquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alumni Enquiry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>